Fix file refreshing in jmespath expressions
NewTimer will only fire the timer once; what was actually intended was
NewTicker. This change adds a Ticker abstraction to the clock package,
and then uses that instead of a timer.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -167,6 +167,7 @@ gomock(
     out = "clock.go",
     interfaces = [
         "Clock",
+        "Ticker",
         "Timer",
     ],
     library = "//pkg/clock",
