--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "new_block_device_from_device_linux.go",
         "new_block_device_from_file_unix.go",
         "new_block_device_from_file_windows.go",
+        "write_concurrency_limiting_block_device.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blockdevice",
     visibility = ["//visibility:public"],
@@ -19,6 +20,7 @@ go_library(
         "//pkg/proto/configuration/blockdevice",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_sync//semaphore",
     ] + select({
         "@rules_go//go/platform:android": [
             "//pkg/util",
