Improve pretty printing of Windows-style paths
This provides a neater way of constructing NT device paths which are
required for some system calls (e.g. creation of symlinks).

--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -71,6 +71,9 @@ go_test(
         "@rules_go//go/platform:ios": [
             "local_directory_darwin_test.go",
         ],
+        "@rules_go//go/platform:windows": [
+            "local_directory_windows_test.go",
+        ],
         "//conditions:default": [],
     }),
     deps = [
