Add oauth client_credentials, split http into client/server
Add the ability to provide oauth to http client. A cycle occurs
so client and server is now split. Client credentials is currently
the only supported OAuth http flow. PerRPCCredentials supports
all 3 OAuth cases now.

--- a/cmd/sync_jwks_to_configmap/BUILD.bazel
+++ b/cmd/sync_jwks_to_configmap/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/cmd/sync_jwks_to_configmap",
     visibility = ["//visibility:private"],
     deps = [
-        "//pkg/http",
+        "//pkg/http/client",
         "//pkg/program",
         "//pkg/proto/configuration/sync_jwks_to_configmap",
         "//pkg/util",
