--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -37,11 +37,13 @@ go_library(
         "//pkg/auth",
         "//pkg/clock",
         "//pkg/eviction",
+        "//pkg/http/client",
         "//pkg/jmespath",
         "//pkg/jwt",
         "//pkg/program",
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/http/client",
         "//pkg/util",
         "//pkg/x509",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
