--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -40,7 +40,7 @@ go_library(
         "//pkg/filesystem",
         "//pkg/filesystem/path",
         "//pkg/grpc",
-        "//pkg/http",
+        "//pkg/http/client",
         "//pkg/program",
         "//pkg/proto/configuration/blobstore",
         "//pkg/proto/configuration/digest",
