--- a/pkg/proto/configuration/cloud/aws/BUILD.bazel
+++ b/pkg/proto/configuration/cloud/aws/BUILD.bazel
@@ -6,7 +6,7 @@ proto_library(
     name = "aws_proto",
     srcs = ["aws.proto"],
     visibility = ["//visibility:public"],
-    deps = ["//pkg/proto/configuration/http:http_proto"],
+    deps = ["//pkg/proto/configuration/http/client:client_proto"],
 )
 
 go_proto_library(
@@ -14,7 +14,7 @@ go_proto_library(
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/cloud/aws",
     proto = ":aws_proto",
     visibility = ["//visibility:public"],
-    deps = ["//pkg/proto/configuration/http"],
+    deps = ["//pkg/proto/configuration/http/client"],
 )
 
 go_library(
