--- a/pkg/proto/configuration/http/server/BUILD.bazel
+++ b/pkg/proto/configuration/http/server/BUILD.bazel
@@ -3,12 +3,13 @@ load("@rules_go//proto:def.bzl", "go_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
 proto_library(
-    name = "http_proto",
-    srcs = ["http.proto"],
+    name = "server_proto",
+    srcs = ["server.proto"],
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/auth:auth_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
+        "//pkg/proto/configuration/http/client:client_proto",
         "//pkg/proto/configuration/jmespath:jmespath_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
@@ -17,13 +18,14 @@ proto_library(
 )
 
 go_proto_library(
-    name = "http_go_proto",
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/http",
-    proto = ":http_proto",
+    name = "server_go_proto",
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/http/server",
+    proto = ":server_proto",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/http/client",
         "//pkg/proto/configuration/jmespath",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
@@ -31,8 +33,8 @@ go_proto_library(
 )
 
 go_library(
-    name = "http",
-    embed = [":http_go_proto"],
-    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/http",
+    name = "server",
+    embed = [":server_go_proto"],
+    importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/http/server",
     visibility = ["//visibility:public"],
 )
