--- a/pkg/prometheus/BUILD.bazel
+++ b/pkg/prometheus/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_model//go",
         "@com_github_prometheus_common//expfmt",
+        "@com_github_prometheus_common//model",
     ],
 )
 
