Add reformat.sh script to bb-storage
- This does not include clang-format for .proto.

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -12,3 +12,8 @@ expand_template(
     template = ["_TAG_"],
     visibility = ["//visibility:public"],
 )
+
+sh_binary(
+    name = "reformat",
+    srcs = ["reformat.sh"],
+)
