--- a/pkg/proto/configuration/bb_copy/BUILD.bazel
+++ b/pkg/proto/configuration/bb_copy/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "buildbarn_configuration_bb_copy_proto",
     srcs = ["bb_copy.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:blobstore_proto",
