--- a/pkg/proto/configuration/x509/BUILD.bazel
+++ b/pkg/proto/configuration/x509/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "x509_proto",
     srcs = ["x509.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
     deps = ["//pkg/proto/configuration/jmespath:jmespath_proto"],
 )
