--- a/pkg/proto/configuration/eviction/BUILD.bazel
+++ b/pkg/proto/configuration/eviction/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "eviction_proto",
     srcs = ["eviction.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
 )
 
