--- a/pkg/proto/configuration/global/BUILD.bazel
+++ b/pkg/proto/configuration/global/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "global_proto",
     srcs = ["global.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/grpc:grpc_proto",
