--- a/pkg/proto/configuration/jmespath/BUILD.bazel
+++ b/pkg/proto/configuration/jmespath/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "jmespath_proto",
     srcs = ["jmespath.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
     deps = ["@protobuf//:struct_proto"],
 )
