--- a/pkg/proto/configuration/sync_jwks_to_configmap/BUILD.bazel
+++ b/pkg/proto/configuration/sync_jwks_to_configmap/BUILD.bazel
@@ -5,6 +5,7 @@ load("@rules_proto//proto:defs.bzl", "proto_library")
 proto_library(
     name = "sync_jwks_to_configmap_proto",
     srcs = ["sync_jwks_to_configmap.proto"],
+    import_prefix = "github.com/buildbarn/bb-storage",
     visibility = ["//visibility:public"],
     deps = ["//pkg/proto/configuration/http/client:client_proto"],
 )
