Replace references of branch 'master' with 'main'

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -609,12 +609,11 @@
          }
       }
    },
-   "name": "master",
+   "name": "main",
    "on": {
       "push": {
          "branches": [
-            "main",
-            "master"
+            "main"
          ]
       }
    }
