--- a/.github/workflows/pull-requests.yaml
+++ b/.github/workflows/pull-requests.yaml
@@ -137,8 +137,7 @@
    "on": {
       "pull_request": {
          "branches": [
-            "main",
-            "master"
+            "main"
          ]
       }
    }
