feat: buildifier on aspect workflows
It has a nicer DX for showing failures, and will soon let you apply suggested fix

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -25,6 +25,13 @@ buildifier(
     name = "buildifier",
 )
 
+buildifier(
+    name = "buildifier.check",
+    exclude_patterns = ["./.git/*"],
+    lint_mode = "warn",
+    mode = "diff",
+)
+
 npm_link_all_packages(
     name = "node_modules",
 )
