Disallow windows for reformat due to sh script

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -25,4 +25,8 @@ sh_binary(
     deps = [
         "@rules_shell//shell/runfiles",
     ],
+    target_compatible_with = select({
+        "@platforms//os:windows": ["@platforms//:incompatible"],
+        "//conditions:default": [],
+    }),
 )
