--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -18,15 +18,15 @@ sh_binary(
     name = "reformat",
     srcs = ["reformat.sh"],
     data = [
-        "@rules_go//go:go",
         "@cc_mvdan_gofumpt//:gofumpt",
         "@llvm_toolchain_llvm//:bin/clang-format",
-    ],
-    deps = [
-        "@rules_shell//shell/runfiles",
+        "@rules_go//go",
     ],
     target_compatible_with = select({
         "@platforms//os:windows": ["@platforms//:incompatible"],
         "//conditions:default": [],
     }),
+    deps = [
+        "@rules_shell//shell/runfiles",
+    ],
 )
