Reformat script to handle embed, protos, formatting (#294)

--- a/tools/BUILD.bazel
+++ b/tools/BUILD.bazel
@@ -1,6 +1,7 @@
 # gazelle:ignore
 
 load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
+load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
 
 # When built with --stamp, creates a non-deterministic output file for pushing images to a remote registry.
 # With --nostamp, produces a deterministic output so dependents get cache hits.
@@ -11,4 +12,22 @@ expand_template(
     substitutions = {"_TAG_": "0.0.0"},
     template = ["_TAG_"],
     visibility = ["//visibility:public"],
+)
+
+sh_binary(
+    name = "reformat",
+    srcs = ["reformat.sh"],
+    data = [
+        "//:gazelle",
+        "@cc_mvdan_gofumpt//:gofumpt",
+        "@llvm_toolchain_llvm//:bin/clang-format",
+        "@rules_go//go",
+    ],
+    target_compatible_with = select({
+        "@platforms//os:windows": ["@platforms//:incompatible"],
+        "//conditions:default": [],
+    }),
+    deps = [
+        "@rules_shell//shell/runfiles",
+    ],
 )
