--- a/pkg/jmespath/BUILD.bazel
+++ b/pkg/jmespath/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/protojson",
         "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//types/known/structpb",
     ],
