Implement merging of ServerCapabilities version numbers
Right now Buildbarn always returns a hardcoded set of version numbers.
This may have worked well for pure Buildbarn setups, but for
environments where a mixture is used (e.g., bb_clientd placed in front
of an EngFlow setup), we get it wrong.

This change extends MergingProvider to properly merge version numbers if
provided. We subsequently patch up the CAS and AC gRPC client backends
and forwarding build queue to propagate the version numbers provided by
the backends.

Finally we need to take local version number compatibility into account.
This is solved by letting cmd/bb_storage/main.go merge in an additional
static provider that limits the numbers to the range that Buildbarn
actually implements. For plain storage nodes that's v2.0 to v2.11.

Fixes: #276

--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -23,6 +23,7 @@ go_library(
         "//pkg/proto/iscc",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@bazel_remote_apis//build/bazel/semver:semver_go_proto",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
