--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,17 +1,20 @@
 module(name = "com_github_buildbarn_bb_storage")
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
-bazel_dep(name = "aspect_rules_js", version = "2.6.0")
+bazel_dep(name = "aspect_rules_js", version = "2.8.0")
 bazel_dep(name = "bazel_remote_apis", version = "0")
-bazel_dep(name = "gazelle", version = "0.45.0")
-bazel_dep(name = "googleapis", version = "0.0.0-20250826-a92cee39")
+bazel_dep(name = "gazelle", version = "0.46.0")
+bazel_dep(name = "googleapis", version = "0.0.0-20251104-53af3b72")
+bazel_dep(name = "grpc", version = "1.76.0")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
-bazel_dep(name = "opentelemetry-proto", version = "1.7.0")
-bazel_dep(name = "toolchains_protoc", version = "0.5.0")  # must come BEFORE protobuf so the toolchain registration wins
+bazel_dep(name = "opentelemetry-proto", version = "1.8.0")
+bazel_dep(name = "toolchains_protoc", version = "0.6.0")  # must come BEFORE protobuf so the toolchain registration wins
 bazel_dep(name = "platforms", version = "1.0.0")
-bazel_dep(name = "protobuf", version = "31.1")
-bazel_dep(name = "rules_go", version = "0.57.0")
+bazel_dep(name = "protobuf", version = "33.0")
+bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
+bazel_dep(name = "rules_go", version = "0.58.3")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
+bazel_dep(name = "rules_nodejs", version = "6.6.0")
 bazel_dep(name = "rules_oci", version = "2.2.6")
 bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
@@ -21,6 +24,7 @@ bazel_dep(name = "toolchains_llvm", version = "1.5.0")
 git_override(
     module_name = "bazel_remote_apis",
     commit = "824e1ba94b2db15f68ceff97ae6da503fbc26985",
+    patches = ["//:patches/bazel_remote_apis/pr-348.diff"],
     remote = "https://github.com/bazelbuild/remote-apis.git",
 )
 
@@ -31,7 +35,7 @@ single_version_override(
 
 # Match protobuf above, until it ships a pre-built binary toolchain itself
 protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
-protoc.toolchain(version = "v31.1")
+protoc.toolchain(version = "v33.0")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.24.7")
