Add basic support for ALTS authentication
For use in GCP environments. See
https://grpc.io/docs/languages/go/alts/.

--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -16,6 +16,7 @@ proto_library(
         "//pkg/proto/configuration/tls:tls_proto",
         "//pkg/proto/configuration/x509:x509_proto",
         "@protobuf//:duration_proto",
+        "@protobuf//:empty_proto",
         "@protobuf//:struct_proto",
     ],
 )
