--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,10 +13,9 @@ bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "33.0")
 bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
 bazel_dep(name = "rules_go", version = "0.58.3")
+bazel_dep(name = "rules_img", version = "0.2.9")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
 bazel_dep(name = "rules_nodejs", version = "6.6.0")
-bazel_dep(name = "rules_oci", version = "2.2.6")
-bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_shell", version = "0.6.1")
 bazel_dep(name = "toolchains_llvm", version = "1.5.0")
@@ -154,19 +153,11 @@ npm.npm_translate_lock(
 )
 use_repo(npm, "com_github_buildbarn_bb_storage_npm")
 
-oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
-oci.pull(
+pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")
+
+pull(
     name = "distroless_static",
     digest = "sha256:3f2b64ef97bd285e36132c684e6b2ae8f2723293d09aae046196cca64251acac",
-    image = "gcr.io/distroless/static",
-    platforms = [
-        "linux/amd64",
-        "linux/arm64/v8",
-    ],
-)
-use_repo(
-    oci,
-    "distroless_static",
-    "distroless_static_linux_amd64",
-    "distroless_static_linux_arm64_v8",
+    registry = "gcr.io",
+    repository = "distroless/static",
 )
