ci: run "bazel clean" before pushing container images
I observed failed CI runs due to the disk of the CI runner being full.
To work around this, we can simply clear the output base after the regular build and tests, but before pushing container images.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -577,6 +577,11 @@
             },
             {
                "if": "matrix.host.upload",
+               "name": "Clean Bazel cache from previous steps",
+               "run": "bazel clean"
+            },
+            {
+               "if": "matrix.host.upload",
                "name": "Push container bb_copy:bb_copy",
                "run": "bazel run --stamp //cmd/bb_copy:bb_copy_container_push"
             },
