Add tests and minor adjustments

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -260,6 +260,7 @@ gomock(
         "ClientConnInterface",
         "ClientStream",
         "ServerStream",
+        "ServerTransportStream",
         "StreamHandler",
         "Streamer",
         "UnaryHandler",
