--- a/pkg/digest/BUILD.bazel
+++ b/pkg/digest/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_buildbarn_go_sha256tree//:go-sha256tree",
         "@com_github_google_uuid//:uuid",
+        "@com_github_zeebo_blake3//:blake3",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
