Add generic gRPC stream forwarding (#306)
To be able to pass Bazel's build event stream (BES) to the same DNS
name, without having to add an extra L7 router in front of the
bb-storage frontend, add a configuration to forward specific gRPC
methods to other backends. No authorization is possible on the passed
through messages because Buildbarn has no knowledge about the semantics
of the forwarded messages.

The gRPC reflection service has also been extended to forward requests
that cannot be resolved locally.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -57,6 +57,7 @@ use_repo(
     "com_github_gorilla_mux",
     "com_github_grpc_ecosystem_go_grpc_middleware",
     "com_github_grpc_ecosystem_go_grpc_prometheus",
+    "com_github_jhump_protoreflect_v2",
     "com_github_jmespath_go_jmespath",
     "com_github_klauspost_compress",
     "com_github_prometheus_client_golang",
