--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -250,6 +250,7 @@ gomock(
         "ClientConnInterface",
         "ClientStream",
         "ServerStream",
+        "ServerTransportStream",
         "StreamHandler",
         "Streamer",
         "UnaryHandler",
