--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "forwarding_stream_handler.go",
         "jmespath_extractor.go",
         "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
@@ -26,8 +27,10 @@ go_library(
         "peer_transport_credentials_linux.go",
         "proto_trace_attributes_extractor.go",
         "proxy_dialer.go",
+        "reflection_relay.go",
         "request_headers_authenticator.go",
         "request_metadata_tracing_interceptor.go",
+        "routing_stream_handler.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
     ],
@@ -49,6 +52,8 @@ go_library(
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@com_github_jhump_protoreflect_v2//grpcreflect",
+        "@com_github_jhump_protoreflect_v2//protoresolve",
         "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
@@ -63,11 +68,14 @@ go_library(
         "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//peer",
         "@org_golang_google_grpc//reflection",
+        "@org_golang_google_grpc//reflection/grpc_reflection_v1",
         "@org_golang_google_grpc//status",
         "@org_golang_google_grpc_security_advancedtls//:advancedtls",
         "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//reflect/protoreflect",
+        "@org_golang_google_protobuf//types/known/emptypb",
+        "@org_golang_x_sync//errgroup",
         "@org_golang_x_sync//semaphore",
     ] + select({
         "@rules_go//go/platform:android": [
@@ -98,6 +106,7 @@ go_test(
         "authenticating_interceptor_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "forwarding_stream_handler_test.go",
         "jmespath_extractor_test.go",
         "lazy_client_dialer_test.go",
         "metadata_adding_interceptor_test.go",
@@ -107,6 +116,7 @@ go_test(
         "proto_trace_attributes_extractor_test.go",
         "request_headers_authenticator_test.go",
         "request_metadata_tracing_interceptor_test.go",
+        "routing_stream_handler_test.go",
     ] + select({
         "@rules_go//go/platform:android": [
             "peer_transport_credentials_test.go",
