On Linux, relaunch the current process when running as PID 1
When run as PID 1 inside of a container, bb_runner may leave zombie
processes around. This is why we always recommended running bb_runner
through tini. Let's make life a bit easier for ourselves by integrating
such functionality into all Buildbarn binaries.

--- a/pkg/program/BUILD.bazel
+++ b/pkg/program/BUILD.bazel
@@ -6,6 +6,8 @@ go_library(
         "run.go",
         "run_local.go",
         "run_main.go",
+        "run_main_linux.go",
+        "run_main_other.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/program",
     visibility = ["//visibility:public"],
