otelgrpc: treat NotFound as non-error for client spans

--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     name = "otel",
     srcs = [
         "active_spans_reporting_http_handler.go",
+        "grpc_client_stats_handler.go",
         "grpc_otlp_trace_client.go",
         "key_value.go",
         "maximum_rate_sampler.go",
@@ -21,18 +22,26 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/clock",
+        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
+        "@io_opentelemetry_go_otel//:otel",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel//codes",
+        "@io_opentelemetry_go_otel_metric//:metric",
         "@io_opentelemetry_go_otel//propagation",
         "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
         "@io_opentelemetry_go_otel_sdk//trace",
         "@io_opentelemetry_go_otel_trace//:trace",
         "@io_opentelemetry_go_otel_trace//embedded",
+        "@io_opentelemetry_go_otel//semconv/v1.37.0:v1_37_0",
+        "@io_opentelemetry_go_otel//semconv/v1.37.0/rpcconv:rpcconv",
         "@io_opentelemetry_go_proto_otlp//collector/trace/v1:trace",
         "@io_opentelemetry_go_proto_otlp//common/v1:common",
         "@io_opentelemetry_go_proto_otlp//trace/v1:trace",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//metadata",
+        "@org_golang_google_grpc//peer",
+        "@org_golang_google_grpc//stats",
         "@org_golang_google_grpc//status",
     ],
 )
