--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -76,6 +76,7 @@ use_repo(
     "io_opentelemetry_go_otel",
     "io_opentelemetry_go_otel_exporters_jaeger",
     "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
+    "io_opentelemetry_go_otel_metric",
     "io_opentelemetry_go_otel_sdk",
     "io_opentelemetry_go_otel_trace",
     "io_opentelemetry_go_proto_otlp",
